testsuite/lab2-testsuite/good/core105.cc
int main() {
  let int x = 5;

  while (x > 3) printInt(x--);

  return x;
}
